# digital_filters

./: .gitignore  CMakeLists.txt  Makefile  readme.md
analysis/: second_order_bilinear_xfrm.m
hello_world/include/: hello_world.hpp
hello_world/src/: CMakeLists.txt  hello_world.cpp
hello_world/tests/: CMakeLists.txt  hello_world.test.cpp
iir/include/: iir.hpp
root_finder/include/: CMakeLists.txt  example.hpp  example.tpp  main.cpp
root_finder/tests/: CMakeLists.txt  root_finder.test.cpp
tools/cmake/: get_gcem.cmake
